--- a/index.html
+++ b/index.html
@@ -17,10 +17,20 @@
 </head>
 
 <body>
+    <nav class="d-block d-md-none">
+        <div class="d-flex justify-content-between align-items-center">
+            <div class="left-logo ">
+                <img src="assets/img/logo.svg" class="d-block ms-auto" alt="" srcset="">
+            </div>
+            <div class="right-icon">
+                <img src="assets/img/icons/hamburger.svg" alt="" srcset="">
+            </div>
+        </div>
+    </nav>
     <header>
         <div class="container">
             <h1 class="text-center">How Not To Suck At <br> <span class="color-primary">Personal Finance 💸</span></h1>
-            <p class="text-center text-22">Everything you need to know about anything!</p>
+            <p class="text-center text-22 d-none d-md-block">Everything you need to know about anything!</p>
             <br>
             <br>
             <div class="d-flex flex-column flex-md-row justify-content-center">
@@ -39,11 +49,14 @@
                     <h2>
                         Learn everything about anything.
                     </h2>
-                    <p class="text-md-22 text-16">
+                    <p class="text-md-22 text-16 d-none d-md-block">
                         Superb courses taught by experts.
                     </p>
+                    <p class="text-md-22 text-16 d-block d-md-none">
+                        Nothing is complicated. Everything <br> you need to know about everything!
+                    </p>
                 </div>
-                <div class="col-md-7 col-sm-12">
+                <div class="col-md-7 col-sm-12 mt-4 mt-md-0">
                     <div id="slickReels">
                         <div class="reels-cover">
                             <div class="ml-3">
@@ -192,12 +205,12 @@
     <br>
     <br>
 
-    <footer>
+    <footer class="px-2 px-md-0">
         <div class="container">
             <div class="row flex-md-row flex-column-reverse">
                 <div class="col-md-4">
                     <img src="assets/img/logo.svg" alt="" srcset="">
-                    <h3 class="my-3 mb-0">Contact Us</h3>
+                    <h3 class="my-3 mb-1">Contact Us</h3>
                     <p class="txt-gray mb-3">Nothing is complicated.</p>
                     <div class="d-flex">
                         <img src="assets/img/icons/instagram.svg" alt="" class="d-block me-3">
@@ -264,6 +277,93 @@
             </div>
         </div>
     </footer>
+
+    <div class="instructor d-block d-md-none">
+
+        <div class="instructor-box">
+            <h2 class="text-white text-center">Want to become a course instructor?</h2>
+            <br>
+            <div class="d-flex justify-content-center flex-column">
+                <button class="button button-dark" data-bs-toggle="modal" data-bs-target="#formSmall">
+                    Apply Now
+                </button>
+                <button class="button button-transparent font-medium color-dark ms-2 d-block">
+                    Learn More
+                </button>
+
+                <!-- Modal -->
+                <div class="modal fade" id="formSmall" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
+                    aria-labelledby="staticBackdropLabel" aria-hidden="true">
+                    <div class="modal-dialog">
+                        <div class="modal-content py-2 px-3">
+
+                            <div class="modal-body">
+                                <div class="row">
+                                    <div class="col-md-6">
+                                        <div class="mt-3 d-flex flex-column">
+                                            <label for="" class="form-label">Your Name</label>
+                                            <input type="text" placeholder="Johnny Appleseed"
+                                                class="custom-input-rounded">
+                                        </div>
+                                    </div>
+                                    <div class="col-md-6">
+                                        <div class="mt-3 d-flex flex-column">
+                                            <label for="" class="form-label">Your Username</label>
+                                            <input type="text" placeholder="YourName@gmail.com"
+                                                class="custom-input-rounded">
+                                        </div>
+                                    </div>
+                                    <div class="col-md-12">
+                                        <div class="mt-3 d-flex flex-column">
+                                            <label for="" class="form-label">What course topic would you like to
+                                                teach?</label>
+                                            <div class="position-relative custom-select-field mt-3">
+                                                <select class="custom-select" onchange="selectClick(this)"
+                                                    onclick="selectClick(this)">
+                                                    <option value="" disabled selected>Chess ♟️</option>
+                                                    <option value="Piano 🎹">Piano 🎹</option>
+                                                    <option value="Blackjack 🃏">Blackjack 🃏</option>
+                                                    <option value="Bodybuilding 🏋">Bodybuilding 🏋</option>
+                                                </select>
+                                                <ul class="custom-select-list d-none">
+
+                                                </ul>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-md-12">
+                                        <div class="mt-3 d-flex flex-column">
+                                            <label for="" class="form-label">Why are you the best person to teach
+                                                this course?</label>
+                                            <textarea name=""
+                                                placeholder="I’m the best person to teach this course because ..."
+                                                class="custom-input-rounded" id="" cols="30" rows="10"></textarea>
+                                        </div>
+                                    </div>
+                                    <div class="col-md-12">
+                                        <div class="mt-3 d-flex flex-column">
+                                            <label for="" class="form-label">Why are you the best person to teach
+                                                this course?</label>
+                                            <textarea name=""
+                                                placeholder="Yeah! I have XYZ subscribers. Here’s the URL to my channel: YouTube.com/c/HowNotToSuckAt"
+                                                class="custom-input-rounded" id="" cols="30" rows="10"></textarea>
+                                        </div>
+                                    </div>
+                                </div>
+
+
+                                <button class="button button-primary mt-3 ms-auto d-block"
+                                    data-bs-dismiss="modal">Submit</button>
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    </div>
+
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
