--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
     <link rel="stylesheet" type="text/css"
         href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css" />
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
     <link rel="stylesheet" href="assets/css/main.css">
 </head>
 
@@ -60,21 +61,33 @@
                     <div id="slickReels">
                         <div class="reels-cover">
                             <div class="ml-3">
+                                <div class="player-box" onclick="playVideo(this)">
+                                    <i class="fas fa-play"></i>
+                                </div>
                                 <video src="assets/video/reels2.mp4"></video>
                             </div>
                         </div>
                         <div class="reels-cover">
                             <div class="ml-3">
+                                <div class="player-box" onclick="playVideo(this)">
+                                    <i class="fas fa-play"></i>
+                                </div>
                                 <video src="assets/video/reels2.mp4"></video>
                             </div>
                         </div>
                         <div class="reels-cover">
                             <div class="ml-3">
+                                <div class="player-box" onclick="playVideo(this)">
+                                    <i class="fas fa-play"></i>
+                                </div>
                                 <video src="assets/video/reels2.mp4"></video>
                             </div>
                         </div>
                         <div class="reels-cover">
                             <div class="ml-3">
+                                <div class="player-box" onclick="playVideo(this)">
+                                    <i class="fas fa-play"></i>
+                                </div>
                                 <video src="assets/video/reels2.mp4"></video>
                             </div>
                         </div>
