--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
     </nav>
     <header>
         <div class="container">
-            <h1 class="text-center">How Not To Suck At <br> <span class="color-primary">Personal Finance 💸</span></h1>
+            <h1 class="text-center">How Not To Suck At <br> <span class="color-primary finance-personal">Personal
+                    Finance 💸</span></h1>
+            <br>
             <p class="text-center text-22 d-none d-md-block">Everything you need to know about anything!</p>
             <br>
             <br>
@@ -297,7 +299,8 @@
             <h2 class="text-white text-center">Want to become a course instructor?</h2>
             <br>
             <div class="d-flex justify-content-center flex-column">
-                <button class="button button-dark" data-bs-toggle="modal" data-bs-target="#formSmall">
+                <button class="button button-dark w-fit mx-auto d-block" data-bs-toggle="modal"
+                    data-bs-target="#formSmall">
                     Apply Now
                 </button>
                 <button class="button button-transparent font-medium color-dark ms-2 d-block">
