add arrow forward

--- a/index.html
+++ b/index.html
@@ -52,10 +52,10 @@
                     <h2>
                         Learn everything about anything.
                     </h2>
-                    <p class="text-md-22 text-16 d-none d-md-block">
+                    <p class="text-md-22 text-16 d-none d-md-block color-gray mt-4">
                         Superb courses taught by experts.
                     </p>
-                    <p class="text-md-22 text-16 d-block d-md-none">
+                    <p class="text-md-22 text-16 d-block d-md-none color-gray ">
                         Nothing is complicated. Everything <br> you need to know about everything!
                     </p>
                 </div>
@@ -245,8 +245,11 @@
                                     <p class="text-20 mb-0 font-medium">
                                         Legal stuff
                                     </p>
-                                    <p class="text-blue">legal@hntsa.com</ class="text-blue">
+                                    <p class="text-blue mb-0">legal@hntsa.com</p>
                                 </div>
+                                <a href="" class="ms-auto d-block d-md-none align-self-center">
+                                    <img src="assets/img/icons/forward.svg" alt="" srcset="">
+                                </a>
                             </div>
                         </div>
                         <div class="col-md mt-3">
@@ -258,8 +261,11 @@
                                     <p class="text-20 mb-0 font-medium">
                                         Everything else
                                     </p>
-                                    <p class="text-blue">hello@hntsa.com</p>
+                                    <p class="text-blue mb-0">hello@hntsa.com</p>
                                 </div>
+                                <a href="" class="ms-auto d-block d-md-none align-self-center">
+                                    <img src="assets/img/icons/forward.svg" alt="" srcset="">
+                                </a>
                             </div>
                         </div>
                         <div class="col-md mt-3">
@@ -270,8 +276,11 @@
                                     <p class="text-20 mb-0 font-medium">
                                         Press inquiries
                                     </p>
-                                    <p class="text-blue">press@hntsa.com</p>
+                                    <p class="text-blue mb-0">press@hntsa.com</p>
                                 </div>
+                                <a href="" class="ms-auto d-block d-md-none align-self-center">
+                                    <img src="assets/img/icons/forward.svg" alt="" srcset="">
+                                </a>
                             </div>
                         </div>
                         <div class="col-md mt-3">
@@ -283,8 +292,11 @@
                                     <p class="text-20 mb-0 font-medium">
                                         Legal stuff
                                     </p>
-                                    <p class="text-blue">legal@hntsa.com</p>
+                                    <p class="text-blue mb-0">legal@hntsa.com</p>
                                 </div>
+                                <a href="" class="ms-auto d-block d-md-none align-self-center">
+                                    <img src="assets/img/icons/forward.svg" alt="" srcset="">
+                                </a>
                             </div>
                         </div>
                     </div>
