--- a/index.html
+++ b/index.html
@@ -48,16 +48,18 @@
     <div class="learn">
         <div class="container">
             <div class="row">
-                <div class="col-md-5">
-                    <h2>
-                        Learn everything about anything.
-                    </h2>
-                    <p class="text-md-22 text-16 d-none d-md-block color-gray mt-4">
-                        Superb courses taught by experts.
-                    </p>
-                    <p class="text-md-22 text-16 d-block d-md-none color-gray ">
-                        Nothing is complicated. Everything <br> you need to know about everything!
-                    </p>
+                <div class="col-md-5 d-flex">
+                    <div class="align-self-center">
+                        <h2>
+                            Learn everything about anything.
+                        </h2>
+                        <p class="text-md-22 text-16 d-none d-md-block color-gray mt-4">
+                            Superb courses taught by experts.
+                        </p>
+                        <p class="text-md-22 text-16 d-block d-md-none color-gray ">
+                            Nothing is complicated. Everything <br> you need to know about everything!
+                        </p>
+                    </div>
                 </div>
                 <div class="col-md-7 col-sm-12 mt-4 mt-md-0">
                     <div id="slickReels">
@@ -225,8 +227,8 @@
             <div class="row flex-md-row flex-column-reverse">
                 <div class="col-md-3">
                     <img src="assets/img/logo.svg" alt="" srcset="">
-                    <h3 class="my-3 mb-1">Contact Us</h3>
-                    <p class="txt-gray mb-3">Nothing is complicated.</p>
+                    <h3 class="my-3 mb-1 d-block d-md-none">Contact Us</h3>
+                    <p class="color-gray mt-2 mb-3">Nothing is complicated.</p>
                     <div class="d-flex">
                         <img src="assets/img/icons/instagram.svg" alt="" class="d-block me-3">
                         <img src="assets/img/icons/youtube.svg" alt="" class="d-block me-3">
@@ -254,7 +256,7 @@
                         </div>
                         <div class="col-md mt-3">
                             <div class="footer-list d-flex align-items-start  w-100">
-                                <img src="assets/img/icons/scales.svg" class="mt-2 d-none d-md-block" alt="" srcset="">
+                                <img src="assets/img/icons/search.svg" class="mt-2 d-none d-md-block" alt="" srcset="">
                                 <img src="assets/img/icons/search-bg.svg" class="mt-2 d-md-none d-block" alt=""
                                     srcset="">
                                 <div class="flex flex-column ms-3">
@@ -270,7 +272,7 @@
                         </div>
                         <div class="col-md mt-3">
                             <div class="footer-list d-flex align-items-start  w-100">
-                                <img src="assets/img/icons/scales.svg" class="mt-2 d-none d-md-block" alt="" srcset="">
+                                <img src="assets/img/icons/user.svg" class="mt-2 d-none d-md-block" alt="" srcset="">
                                 <img src="assets/img/icons/user-bg.svg" class="mt-2 d-md-none d-block" alt="" srcset="">
                                 <div class="flex flex-column ms-3">
                                     <p class="text-20 mb-0 font-medium">
@@ -285,12 +287,13 @@
                         </div>
                         <div class="col-md mt-3">
                             <div class="footer-list d-flex align-items-start  w-100">
-                                <img src="assets/img/icons/scales.svg" class="mt-2 d-none d-md-block" alt="" srcset="">
+                                <img src="assets/img/icons/building.svg" class="mt-2 d-none d-md-block" alt=""
+                                    srcset="">
                                 <img src="assets/img/icons/building-bg.svg" class="mt-2 d-md-none d-block" alt=""
                                     srcset="">
                                 <div class="flex flex-column ms-3">
                                     <p class="text-20 mb-0 font-medium">
-                                        Legal stuff
+                                        Business Development
                                     </p>
                                     <p class="text-blue mb-0">legal@hntsa.com</p>
                                 </div>
