--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <header>
         <div class="container">
             <h1 class="text-center">How Not To Suck At <br> <span class="color-primary finance-personal">Personal
-                    Finance 💸</span></h1>
+                    Finance </span>💸</h1>
             <br>
             <p class="text-center text-22 d-none d-md-block">Everything you need to know about anything!</p>
             <br>
@@ -225,7 +225,7 @@
     <footer class="px-2 px-md-0">
         <div class="container">
             <div class="row flex-md-row flex-column-reverse">
-                <div class="col-md-3">
+                <div class="col-md-2">
                     <img src="assets/img/logo.svg" alt="" srcset="">
                     <h3 class="my-3 mb-1 d-block d-md-none">Contact Us</h3>
                     <p class="color-gray mt-2 mb-3">Nothing is complicated.</p>
@@ -236,7 +236,7 @@
                         <img src="assets/img/icons/medium.svg" alt="" class="d-block me-3">
                     </div>
                 </div>
-                <div class="col-md-9 mb-4 mb-md-0">
+                <div class="col-md-10 mb-4 mb-md-0">
                     <div class=" row">
                         <div class="col-md mt-3">
                             <div class="footer-list d-flex align-items-start  w-100">
