--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
                 </div>
                 <div class="col-md-10 mb-4 mb-md-0">
                     <div class=" row">
-                        <div class="col-md mt-3">
+                        <div class="col-md mt-3 p-0">
                             <div class="footer-list d-flex align-items-start  w-100">
                                 <img src="assets/img/icons/scales.svg" class="mt-2 d-none d-md-block" alt="" srcset="">
                                 <img src="assets/img/icons/scales-bg.svg" class="mt-2 d-md-none d-block" alt=""
@@ -254,7 +254,7 @@
                                 </a>
                             </div>
                         </div>
-                        <div class="col-md mt-3">
+                        <div class="col-md mt-3 p-0">
                             <div class="footer-list d-flex align-items-start  w-100">
                                 <img src="assets/img/icons/search.svg" class="mt-2 d-none d-md-block" alt="" srcset="">
                                 <img src="assets/img/icons/search-bg.svg" class="mt-2 d-md-none d-block" alt=""
@@ -270,7 +270,7 @@
                                 </a>
                             </div>
                         </div>
-                        <div class="col-md mt-3">
+                        <div class="col-md mt-3 p-0">
                             <div class="footer-list d-flex align-items-start  w-100">
                                 <img src="assets/img/icons/user.svg" class="mt-2 d-none d-md-block" alt="" srcset="">
                                 <img src="assets/img/icons/user-bg.svg" class="mt-2 d-md-none d-block" alt="" srcset="">
@@ -285,7 +285,7 @@
                                 </a>
                             </div>
                         </div>
-                        <div class="col-md mt-3">
+                        <div class="col-md mt-3 p-0">
                             <div class="footer-list d-flex align-items-start  w-100">
                                 <img src="assets/img/icons/building.svg" class="mt-2 d-none d-md-block" alt=""
                                     srcset="">
