completing option list

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <title>Hello, world!</title>
+    <title>How Not To Stuck At?</title>
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
     <link rel="stylesheet" type="text/css"
         href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css" />
@@ -31,7 +31,7 @@
     <header>
         <div class="container">
             <h1 class="text-center">How Not To Suck At <br> <span class="color-primary finance-personal">Personal
-                    Finance </span>💸</h1>
+                    Finance 💸</span></h1>
             <br>
             <p class="text-center text-22 d-none d-md-block">Everything you need to know about anything!</p>
             <br>
@@ -124,16 +124,15 @@
                     <button class="button button-dark" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
                         Apply Now
                     </button>
-                    <button class="button button-transparent font-medium color-dark ms-2 d-block">
-                        Learn More
-                    </button>
+
 
                     <!-- Modal -->
                     <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false"
                         tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
                         <div class="modal-dialog">
                             <div class="modal-content py-2 px-3">
-
+                                <button type="button" class="btn-close d-block ms-auto my-3 me-2"
+                                    data-bs-dismiss="modal" aria-label="Close"></button>
                                 <div class="modal-body">
                                     <div class="row">
                                         <div class="col-md-6">
@@ -161,6 +160,21 @@
                                                         <option value="Piano 🎹">Piano 🎹</option>
                                                         <option value="Blackjack 🃏">Blackjack 🃏</option>
                                                         <option value="Bodybuilding 🏋">Bodybuilding 🏋</option>
+                                                        <option value="Econ 101 📊">Econ 101 📊</option>
+                                                        <option value="Photography 📷">Photography 📷</option>
+                                                        <option value="Guitar 🎸">Guitar 🎸</option>
+                                                        <option value="YouTube ▶️">YouTube ▶️</option>
+                                                        <option value="Writing ✍️">Writing ✍️</option>
+                                                        <option value="Speed Reading 📚">Speed Reading 📚</option>
+                                                        <option value="Personal Finance 💸">Personal Finance 💸</option>
+                                                        <option value="Software 🧑‍💻">Software 🧑‍💻</option>
+                                                        <option value="Français 🇫🇷">Français 🇫🇷</option>
+                                                        <option value="Drawing 🎨">Drawing 🎨</option>
+                                                        <option value="Copyright Law ⚖️">Copyright Law ⚖️</option>
+                                                        <option value="Poker 🃏">Poker 🃏</option>
+                                                        <option value="Filmmaking 🎬">Filmmaking 🎬</option>
+                                                        <option value="Calculus 📐">Calculus 📐</option>
+                                                        <option value="Investing 📈">Investing 📈</option>
                                                     </select>
                                                     <ul class="custom-select-list d-none">
 
@@ -230,10 +244,18 @@
                     <h3 class="my-3 mb-1 d-block d-md-none">Contact Us</h3>
                     <p class="color-gray mt-2 mb-3">Nothing is complicated.</p>
                     <div class="d-flex">
-                        <img src="assets/img/icons/instagram.svg" alt="" class="d-block me-3">
-                        <img src="assets/img/icons/youtube.svg" alt="" class="d-block me-3">
-                        <img src="assets/img/icons/tiktok.svg" alt="" class="d-block me-3">
-                        <img src="assets/img/icons/medium.svg" alt="" class="d-block me-3">
+                        <a href="https://instagram.com">
+                            <img src="assets/img/icons/instagram.svg" alt="" class="d-block me-3">
+                        </a>
+                        <a href="https://youtube.com">
+                            <img src="assets/img/icons/youtube.svg" alt="" class="d-block me-3">
+                        </a>
+                        <a href="https://tiktok.com">
+                            <img src="assets/img/icons/tiktok.svg" alt="" class="d-block me-3">
+                        </a>
+                        <a href="htpps://medium.com">
+                            <img src="assets/img/icons/medium.svg" alt="" class="d-block me-3">
+                        </a>
                     </div>
                 </div>
                 <div class="col-md-10 mb-4 mb-md-0">
@@ -318,10 +340,6 @@
                     data-bs-target="#formSmall">
                     Apply Now
                 </button>
-                <button class="button button-transparent font-medium color-dark ms-2 d-block">
-                    Learn More
-                </button>
-
                 <!-- Modal -->
                 <div class="modal fade" id="formSmall" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
                     aria-labelledby="staticBackdropLabel" aria-hidden="true">
