--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
     </nav>
     <header>
         <div class="container">
-            <h1 class="text-center">How Not To Suck At <br> <span class="color-primary finance-personal">Personal
+            <h1 class="text-center font-bold">How Not To Suck At <br> <span
+                    class="color-primary finance-personal">Personal
                     Finance 💸</span></h1>
             <br>
             <p class="text-center text-22 d-none d-md-block">Everything you need to know about anything!</p>
@@ -38,7 +39,8 @@
             <br>
             <div class="d-flex flex-column flex-md-row justify-content-center">
                 <input type="text" class="custom-input" placeholder="Your email address">
-                <button class="button button-primary ms-md-4 align-self-center w-fit d-block mt-3 mt-md-0">
+                <button style="height: 51px;"
+                    class="button button-primary ms-md-4 align-self-center w-fit d-block mt-3 mt-md-0">
                     Sign Up
                 </button>
             </div>
@@ -68,7 +70,7 @@
                                 <div class="player-box" onclick="playVideo(this)">
                                     <i class="fas fa-play"></i>
                                 </div>
-                                <video src="assets/video/reels2.mp4"></video>
+                                <video src="assets/video/reels1.mp4"></video>
                             </div>
                         </div>
                         <div class="reels-cover">
@@ -84,7 +86,7 @@
                                 <div class="player-box" onclick="playVideo(this)">
                                     <i class="fas fa-play"></i>
                                 </div>
-                                <video src="assets/video/reels2.mp4"></video>
+                                <video src="assets/video/reels3.mp4"></video>
                             </div>
                         </div>
                         <div class="reels-cover">
@@ -92,7 +94,47 @@
                                 <div class="player-box" onclick="playVideo(this)">
                                     <i class="fas fa-play"></i>
                                 </div>
-                                <video src="assets/video/reels2.mp4"></video>
+                                <video src="assets/video/reels4.mp4"></video>
+                            </div>
+                        </div>
+                        <div class="reels-cover">
+                            <div class="ml-3">
+                                <div class="player-box" onclick="playVideo(this)">
+                                    <i class="fas fa-play"></i>
+                                </div>
+                                <video src="assets/video/reels5.mp4"></video>
+                            </div>
+                        </div>
+                        <div class="reels-cover">
+                            <div class="ml-3">
+                                <div class="player-box" onclick="playVideo(this)">
+                                    <i class="fas fa-play"></i>
+                                </div>
+                                <video src="assets/video/reels6.mp4"></video>
+                            </div>
+                        </div>
+                        <div class="reels-cover">
+                            <div class="ml-3">
+                                <div class="player-box" onclick="playVideo(this)">
+                                    <i class="fas fa-play"></i>
+                                </div>
+                                <video src="assets/video/reels7.mp4"></video>
+                            </div>
+                        </div>
+                        <div class="reels-cover">
+                            <div class="ml-3">
+                                <div class="player-box" onclick="playVideo(this)">
+                                    <i class="fas fa-play"></i>
+                                </div>
+                                <video src="assets/video/reels8.mp4"></video>
+                            </div>
+                        </div>
+                        <div class="reels-cover">
+                            <div class="ml-3">
+                                <div class="player-box" onclick="playVideo(this)">
+                                    <i class="fas fa-play"></i>
+                                </div>
+                                <video src="assets/video/reels9.mp4"></video>
                             </div>
                         </div>
                     </div>
@@ -242,7 +284,9 @@
                 <div class="col-md-2">
                     <img src="assets/img/logo.svg" alt="" srcset="">
                     <h3 class="my-3 mb-1 d-block d-md-none">Contact Us</h3>
-                    <p class="color-gray mt-2 mb-3">Nothing is complicated.</p>
+                    <p class="color-gray mt-2 mb-0">Nothing is complicated.</p>
+                    <p class="color-gray  mb-0">HNSTA Holdings, LLC</p>
+                    <p class="color-gray  mb-3">Copyright 2021, All rights reserved</p>
                     <div class="d-flex">
                         <a href="https://instagram.com">
                             <img src="assets/img/icons/instagram.svg" alt="" class="d-block me-3">
