change start video

--- a/index.html
+++ b/index.html
@@ -80,11 +80,11 @@
                     <div id="slickReels">
                         <div class="reels-cover">
                             <div class="ml-3">
-                                <div class="player-box" onclick="playVideo(this)" onmouseenter="show nbv">
+                                <div class="player-box" onclick="playVideo(this)">
                                     <i class="fas fa-play"></i>
                                 </div>
                                 <video poster="assets/img/thumbnail1.png">
-                                    <source src="assets/video/reels1.mp4">
+                                    <source src="assets/video/reels1.mp4#t=10">
                                 </video>
                             </div>
                         </div>
@@ -94,7 +94,7 @@
                                     <i class="fas fa-play"></i>
                                 </div>
                                 <video>
-                                    <source src="assets/video/reels2.mp4">
+                                    <source src="assets/video/reels2.mp4#t=3">
                                 </video>
                             </div>
                         </div>
@@ -103,7 +103,7 @@
                                 <div class="player-box" onclick="playVideo(this)">
                                     <i class="fas fa-play"></i>
                                 </div>
-                                <video src="assets/video/reels3.mp4"></video>
+                                <video src="assets/video/reels3.mp4#t=8"></video>
                             </div>
                         </div>
                     </div>
