--- a/index.html
+++ b/index.html
@@ -98,12 +98,23 @@
                                 </video>
                             </div>
                         </div>
+
                         <div class="reels-cover">
                             <div class="ml-3">
                                 <div class="player-box" onclick="playVideo(this)">
                                     <i class="fas fa-play"></i>
                                 </div>
                                 <video src="assets/video/reels3.mp4#t=8"></video>
+                            </div>
+                        </div>
+                        <div class="reels-cover">
+                            <div class="ml-3">
+                                <div class="player-box" onclick="playVideo(this)">
+                                    <i class="fas fa-play"></i>
+                                </div>
+                                <video>
+                                    <source src="assets/video/reels2.mp4#t=3">
+                                </video>
                             </div>
                         </div>
                     </div>
