--- a/index.html
+++ b/index.html
@@ -43,9 +43,12 @@
     </nav>
     <header>
         <div class="container">
-            <h1 class="text-center font-bold">How Not To Suck At <br> <span
-                    class="color-primary finance-personal">Personal
-                    Finance 💸</span></h1>
+            <h1 class="text-center font-bold">How Not To Suck At</h1>
+            <div class="slide-container d-flex flex-column justify-content-center">
+                <div class="slider">
+
+                </div>
+            </div>
             <br>
             <p class="text-center text-22 d-none d-md-block">Nothing is complicated</p>
             <br>
