--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <title>How Not To Stuck At?</title>
+    <title>How Not To Suck At?</title>
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
     <link rel="stylesheet" type="text/css"
         href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css" />
@@ -50,7 +50,7 @@
                 </div>
             </div>
             <br>
-            <p class="text-center text-22 d-none d-md-block">Nothing is complicated</p>
+            <p class="text-center text-22 d-none d-md-block">Nothing is complicated.</p>
             <br>
             <br>
             <div class="d-flex flex-column flex-md-row justify-content-center">
@@ -69,7 +69,7 @@
                 <div class="col-md-5 d-flex">
                     <div class="align-self-center">
                         <h2>
-                            Learn everything about anything.
+                            Learn everything <br> about anything.
                         </h2>
                         <p class="text-md-22 text-16 d-none d-md-block color-gray mt-4">
                             Superb courses taught by experts.
