remove unused element

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 </head>
 
 <body>
-    <nav class="d-block d-md-none">
+    <!-- <nav class="d-block d-md-none">
         <div class="d-flex justify-content-between align-items-center">
             <div class="left-logo ">
                 <img src="assets/img/logo.svg" class="d-block ms-auto" alt="" srcset="">
@@ -40,7 +40,7 @@
                 <img src="assets/img/icons/hamburger.svg" alt="" srcset="">
             </div>
         </div>
-    </nav>
+    </nav> -->
     <header>
         <div class="container">
             <h1 class="text-center font-bold">How Not To Suck At</h1>
@@ -56,7 +56,8 @@
             <div class="d-flex flex-column flex-md-row justify-content-center">
                 <input type="text" class="custom-input" placeholder="Your email address">
                 <button style="height: 51px;"
-                    class="button button-primary ms-md-4 align-self-center w-fit d-block mt-3 mt-md-0">
+                    class="button button-primary ms-md-4 align-self-center w-fit d-block mt-3 mt-md-0"
+                    onclick="alert('Thank you! We&#8217;ll keep you posted!')">
                     Sign Up
                 </button>
             </div>
@@ -140,7 +141,7 @@
         </div>
     </div> -->
 
-    <div class="instructor d-none d-md-block">
+    <div class="instructor d-none d-md-block my-5">
         <div class="container">
             <div class="instructor-box">
                 <h2 class="text-white text-center">Want to become a course instructor?</h2>
@@ -240,7 +241,7 @@
         </div>
     </div>
 
-    <div class="d-md-none my-3  py-3">
+    <!-- <div class="d-md-none my-3  py-3">
         <br>
         <br>
         <br>
@@ -257,7 +258,7 @@
         </div>
 
 
-    </div>
+    </div> -->
     <br>
     <br>
 
@@ -268,8 +269,8 @@
                     <img src="assets/img/logo.svg" alt="" srcset="">
                     <h3 class="my-3 mb-1 d-block d-md-none">Contact Us</h3>
                     <p class="color-gray mt-2 mb-0">Nothing is complicated.</p>
-                    <p class="color-gray  mb-0">HNSTA Holdings, LLC</p>
-                    <p class="color-gray  mb-3">Copyright 2021, All rights reserved</p>
+                    <p class="color-gray  mb-0">HNTSA Holdings, LLC.</p>
+                    <p class="color-gray  mb-3">Copyright 2021. All rights reserved.</p>
                     <div class="d-flex">
                         <a href="https://instagram.com">
                             <img src="assets/img/icons/instagram.svg" alt="" class="d-block me-3">
@@ -305,14 +306,15 @@
                         </div>
                         <div class="col-md mt-3 p-0">
                             <div class="footer-list d-flex align-items-start  w-100">
-                                <img src="assets/img/icons/search.svg" class="mt-2 d-none d-md-block" alt="" srcset="">
-                                <img src="assets/img/icons/search-bg.svg" class="mt-2 d-md-none d-block" alt=""
+                                <img src="assets/img/icons/building.svg" class="mt-2 d-none d-md-block" alt=""
+                                    srcset="">
+                                <img src="assets/img/icons/building-bg.svg" class="mt-2 d-md-none d-block" alt=""
                                     srcset="">
                                 <div class="flex flex-column ms-3">
                                     <p class="text-20 mb-0 font-medium">
-                                        Everything else
+                                        Business Development
                                     </p>
-                                    <p class="text-blue mb-0">hello@hntsa.com</p>
+                                    <p class="text-blue mb-0">business@hntsa.com</p>
                                 </div>
                                 <a href="" class="ms-auto d-block d-md-none align-self-center">
                                     <img src="assets/img/icons/forward.svg" alt="" srcset="">
@@ -336,30 +338,30 @@
                         </div>
                         <div class="col-md mt-3 p-0">
                             <div class="footer-list d-flex align-items-start  w-100">
-                                <img src="assets/img/icons/building.svg" class="mt-2 d-none d-md-block" alt=""
-                                    srcset="">
-                                <img src="assets/img/icons/building-bg.svg" class="mt-2 d-md-none d-block" alt=""
+                                <img src="assets/img/icons/search.svg" class="mt-2 d-none d-md-block" alt="" srcset="">
+                                <img src="assets/img/icons/search-bg.svg" class="mt-2 d-md-none d-block" alt=""
                                     srcset="">
                                 <div class="flex flex-column ms-3">
                                     <p class="text-20 mb-0 font-medium">
-                                        Business Development
+                                        Everything else
                                     </p>
-                                    <p class="text-blue mb-0">legal@hntsa.com</p>
+                                    <p class="text-blue mb-0">hello@hntsa.com</p>
                                 </div>
                                 <a href="" class="ms-auto d-block d-md-none align-self-center">
                                     <img src="assets/img/icons/forward.svg" alt="" srcset="">
                                 </a>
                             </div>
                         </div>
+
                     </div>
                 </div>
             </div>
         </div>
     </footer>
 
-    <div class="instructor d-block d-md-none">
+    <div class="instructor d-block d-md-none my-5">
 
-        <div class="instructor-box">
+        <div class="instructor-box ">
             <h2 class="text-white text-center">Want to become a <br> course instructor?</h2>
             <br>
             <div class="d-flex justify-content-center flex-column">
