--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <br>
             <br>
             <div class="d-flex flex-column flex-md-row justify-content-center">
-                <input type="text" class="custom-input" placeholder="Your email address">
+                <input type="text" class="custom-input" placeholder="Your email address" maxlength="300">
                 <button style="height: 51px;"
                     class="button button-primary ms-md-4 align-self-center w-fit d-block mt-3 mt-md-0"
                     onclick="alert('Thank you! We&#8217;ll keep you posted!')">
@@ -165,14 +165,14 @@
                                             <div class="mt-3 d-flex flex-column">
                                                 <label for="" class="form-label">Your Name</label>
                                                 <input type="text" placeholder="Johnny Appleseed"
-                                                    class="custom-input-rounded">
+                                                    class="custom-input-rounded" maxlength="300">
                                             </div>
                                         </div>
                                         <div class="col-md-6">
                                             <div class="mt-3 d-flex flex-column">
                                                 <label for="" class="form-label">Your Username</label>
                                                 <input type="text" placeholder="YourName@gmail.com"
-                                                    class="custom-input-rounded">
+                                                    class="custom-input-rounded" maxlength="300">
                                             </div>
                                         </div>
                                         <div class="col-md-12">
@@ -214,7 +214,8 @@
                                                     this course?</label>
                                                 <textarea name=""
                                                     placeholder="I’m the best person to teach this course because ..."
-                                                    class="custom-input-rounded" id="" cols="30" rows="10"></textarea>
+                                                    class="custom-input-rounded " id="" cols="30" rows="10"
+                                                    maxlength="300"></textarea>
                                             </div>
                                         </div>
                                         <div class="col-md-12">
@@ -223,7 +224,8 @@
                                                     this course?</label>
                                                 <textarea name=""
                                                     placeholder="Yeah! I have XYZ subscribers. Here’s the URL to my channel: YouTube.com/c/HowNotToSuckAt"
-                                                    class="custom-input-rounded" id="" cols="30" rows="10"></textarea>
+                                                    class="custom-input-rounded" id="" cols="30" rows="10"
+                                                    maxlength="300"></textarea>
                                             </div>
                                         </div>
                                     </div>
@@ -381,14 +383,14 @@
                                         <div class="mt-3 d-flex flex-column">
                                             <label for="" class="form-label">Your Name</label>
                                             <input type="text" placeholder="Johnny Appleseed"
-                                                class="custom-input-rounded">
+                                                class="custom-input-rounded" maxlength="300">
                                         </div>
                                     </div>
                                     <div class="col-md-6">
                                         <div class="mt-3 d-flex flex-column">
                                             <label for="" class="form-label">Your Username</label>
                                             <input type="text" placeholder="YourName@gmail.com"
-                                                class="custom-input-rounded">
+                                                class="custom-input-rounded" maxlength="300">
                                         </div>
                                     </div>
                                     <div class="col-md-12">
@@ -415,7 +417,8 @@
                                                 this course?</label>
                                             <textarea name=""
                                                 placeholder="I’m the best person to teach this course because ..."
-                                                class="custom-input-rounded" id="" cols="30" rows="10"></textarea>
+                                                class="custom-input-rounded" id="" cols="30" rows="10"
+                                                maxlength="300"></textarea>
                                         </div>
                                     </div>
                                     <div class="col-md-12">
@@ -424,7 +427,8 @@
                                                 this course?</label>
                                             <textarea name=""
                                                 placeholder="Yeah! I have XYZ subscribers. Here’s the URL to my channel: YouTube.com/c/HowNotToSuckAt"
-                                                class="custom-input-rounded" id="" cols="30" rows="10"></textarea>
+                                                class="custom-input-rounded" id="" cols="30" rows="10"
+                                                maxlength="300"></textarea>
                                         </div>
                                     </div>
                                 </div>
