--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     </nav> -->
     <header>
         <div class="container">
-            <h1 class="text-center font-bold">How Not To Suck At&trade;</h1>
+            <h1 class="text-center font-bold position-relative">How Not To Suck At<span class="tm">&trade;</span></h1>
             <div class="slide-container d-flex flex-column justify-content-center">
                 <div class="slider">
 
