--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@
         </div>
     </footer>
 
-    <div class="instructor d-block d-md-none my-md-5">
+    <div class="instructor d-block d-md-none my-md-5 mt-4">
 
         <div class="instructor-box ">
             <h2 class="text-white text-center">Want to become a <br> course instructor?</h2>
