--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 </head>
 
 <body>
-    <!-- <nav class="d-block d-md-none">
+    <nav class="d-block d-md-none invisible">
         <div class="d-flex justify-content-between align-items-center">
             <div class="left-logo ">
                 <img src="assets/img/logo.svg" class="d-block ms-auto" alt="" srcset="">
@@ -40,7 +40,7 @@
                 <img src="assets/img/icons/hamburger.svg" alt="" srcset="">
             </div>
         </div>
-    </nav> -->
+    </nav>
     <header>
         <div class="container">
             <h1 class="text-center font-bold position-relative">How Not To Suck At<span class="tm">&trade;</span></h1>
